--- a/examples/config.ini
+++ b/examples/config.ini
@@ -1,13 +1,14 @@
+experiment_name = "test1"
 downsample_res = 32
 max_iter = 200
-map1 = "vol0.mrc"
-map2 = "vol_given.mrc"
+vol1 = "vol0.mrc"
+vol2 = "vol_given.mrc"
 regul_const = 1e-3
 corr_length = 0.75
 manopt_max_iter = 100
 manopt_min_grad = 0.1
 manopt_min_step = 0.1
 manopt_verbosity = 0
-save_path = "here/"
+save_path = "num_exp1/"
 invert_handedness = False
 refine=True
