fix bug in invert handedness

--- a/report_results/config.ini
+++ b/report_results/config.ini
@@ -1,5 +1,6 @@
 # None of the following wil actually be used for the figures, 
 # I just have to define them so the parser can read the config file
+loss_type = "wemd"
 experiment_name = "paper_figures"
 downsample_res = 32
 max_iter = 200
@@ -8,11 +9,11 @@ vol2 = "volumes/emd_3683.map.gz"
 save_path = "num_exp1/"
 refine=True
 corr_length = 0.75
-loss_type = "wemd"
+
 #######
 
 # These will be used
-invert_handedness = False
+invert_handedness = 0
 regul_const = 1e-3
 manopt_max_iter = 100
 manopt_min_grad = 0.1
